# phoenixtemplate

./: BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_BASELINE.md  DEV_NOTES.md  HARNESS_QUIRKS.md  MIGRATION.md  ONBOARDING_PROMPT.md  PROJECT_STARTER.md  README.md  TEMPLATE_INVENTORY.md  WORKFLOW.md  codex improvement plan.md
.githooks/: pre-push
.github/workflows/: template-self-test.yml
docs/: pr_review_instructions.md  spec.md
presets/: PRESET_ARCHITECTURE.md
scripts/: check-doc-references.sh  check-manifest.sh  check-placeholders.sh  check-rule-consistency.sh  check-spec-consistency.sh  export-starter.sh  render-example.sh  smoke-test.sh
templates/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  manifest.yaml  pyproject.toml
templates/.claude/: settings.json
templates/.claude/skills/request-codex-review/: SKILL.md
templates/.claude/skills/spec-block/: SKILL.md
templates/.githooks/: pre-push
templates/.github/workflows/: ci.yml
templates/docs/: architecture.md  integration.md  karpathy-claude-rules.md  pr_review_instructions.md  runbook.md  setup.md  spec.md
templates/scripts/: _env-schema-parse.sh  bootstrap.sh  check-env.sh  deploy.sh  validators.sh
templates/src/<package_name>/: __init__.py  app.py
templates/tests/: test_smoke.py
